--- a/task_1.ipynb
+++ b/task_1.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -52,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -67,7 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -82,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
@@ -112,7 +112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -122,7 +122,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
@@ -147,20 +147,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[1042, 1085, 1072, 1095, 1072, 1083, 1077, 1080, 1102, 1083, 1103, 44, 1074, 1095, 1088, 1077, 1079, 1074, 1099, 1095, 1072, 1081, 1085, 1086, 1078, 1072, 1088, 1082, 1086, 1077, 1074, 1088, 1077, 1084, 1103, 44, 1087, 1086, 1076, 1074, 1077, 1095, 1077, 1088, 44, 1086, 1076, 1080, 1085, 1084]\n"
+      "[5, 1, 23, 10, 33, 10, 21, 15, 1, 18, 39, 21, 40, 2, 1, 12, 1, 33, 26, 15, 17, 12, 36, 33, 10, 19, 23, 24, 1, 16, 10, 26, 20, 24, 15, 1, 12, 26, 15, 22, 40, 2, 1, 25, 24, 14, 1, 12, 15, 33]\n"
      ]
     }
    ],
    "source": [
     "def vectorize(tokens: list[str]) -> list[int]:\n",
-    "    return [ord(char) for char in tokens]\n",
+    "    char_to_idx = {char: idx for idx, char in enumerate(sorted(set(text)), start=1)}\n",
+    "    return [char_to_idx[char] for char in text]\n",
     "\n",
     "vectorized_text = vectorize(tokenized_text)\n",
     "print(vectorized_text[:50])"
@@ -175,7 +176,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -187,7 +188,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
@@ -199,7 +200,7 @@
       "нача июл чрезвычайн жарк врем вечер молод человек выйт сво каморк котор нанима жилец м переулок улиц медлен нерешим отправ мост благополучн избегнут встреч сво хозяйк лестниц каморк приход сам кровл высок пятиэтажн дом поход шкаф квартир квартирн хозяйк котор нанима каморк обед прислуг помеща лестниц ниж отдельн квартир кажд выход улиц непремен проход мим хозяйкин кухн настеж отвор лестниц кажд молод человек проход мим чувствова какоет болезнен труслив ощущен котор стыд котор морщ должн круг хозяйк боя встрет\n",
       "\n",
       "['н', 'а', 'ч', 'а', 'и', 'ю', 'л', 'ч', 'р', 'е', 'з', 'в', 'ы', 'ч', 'а', 'й', 'н', 'ж', 'а', 'р', 'к', 'в', 'р', 'е', 'м', 'в', 'е', 'ч', 'е', 'р', 'м', 'о', 'л', 'о', 'д', 'ч', 'е', 'л', 'о', 'в', 'е', 'к', 'в', 'ы', 'й', 'т', 'с', 'в', 'о', 'к', 'а', 'м', 'о', 'р', 'к', 'к', 'о', 'т', 'о', 'р', 'н', 'а', 'н', 'и', 'м', 'а', 'ж', 'и', 'л', 'е', 'ц', 'м', 'п', 'е', 'р', 'е', 'у', 'л', 'о', 'к', 'у', 'л', 'и', 'ц', 'м', 'е', 'д', 'л', 'е', 'н', 'н', 'е', 'р', 'е', 'ш', 'и', 'м', 'о', 'т', 'п', 'р', 'а', 'в', 'м', 'о', 'с', 'т', 'б', 'л', 'а', 'г', 'о', 'п', 'о', 'л', 'у', 'ч', 'н', 'и', 'з', 'б', 'е', 'г', 'н', 'у', 'т', 'в', 'с', 'т', 'р', 'е', 'ч', 'с', 'в', 'о', 'х', 'о', 'з', 'я', 'й', 'к', 'л', 'е', 'с', 'т', 'н', 'и', 'ц', 'к', 'а', 'м', 'о', 'р', 'к', 'п', 'р', 'и', 'х', 'о', 'д', 'с', 'а', 'м', 'к', 'р', 'о', 'в', 'л', 'в', 'ы', 'с', 'о', 'к', 'п', 'я', 'т', 'и', 'э', 'т', 'а', 'ж', 'н', 'д', 'о', 'м', 'п', 'о', 'х', 'о', 'д', 'ш', 'к', 'а', 'ф', 'к', 'в', 'а', 'р', 'т', 'и', 'р', 'к', 'в', 'а', 'р', 'т', 'и', 'р', 'н', 'х', 'о', 'з', 'я', 'й', 'к', 'к', 'о', 'т', 'о', 'р', 'н', 'а', 'н', 'и', 'м', 'а', 'к', 'а', 'м', 'о', 'р', 'к', 'о', 'б', 'е', 'д', 'п', 'р', 'и', 'с', 'л', 'у', 'г', 'п', 'о', 'м', 'е', 'щ', 'а', 'л', 'е', 'с', 'т', 'н', 'и', 'ц', 'н', 'и', 'ж', 'о', 'т', 'д', 'е', 'л', 'ь', 'н', 'к', 'в', 'а', 'р', 'т', 'и', 'р', 'к', 'а', 'ж', 'д', 'в', 'ы', 'х', 'о', 'д', 'у', 'л', 'и', 'ц', 'н', 'е', 'п', 'р', 'е', 'м', 'е', 'н', 'п', 'р', 'о', 'х', 'о', 'д', 'м', 'и', 'м', 'х', 'о', 'з', 'я', 'й', 'к', 'и', 'н', 'к', 'у', 'х', 'н', 'н', 'а', 'с', 'т', 'е', 'ж', 'о', 'т', 'в', 'о', 'р', 'л', 'е', 'с', 'т', 'н', 'и', 'ц', 'к', 'а', 'ж', 'д', 'м', 'о', 'л', 'о', 'д', 'ч', 'е', 'л', 'о', 'в', 'е', 'к', 'п', 'р', 'о', 'х', 'о', 'д', 'м', 'и', 'м', 'ч', 'у', 'в', 'с', 'т', 'в', 'о', 'в', 'а', 'к', 'а', 'к', 'о', 'е', 'т', 'б', 'о', 'л', 'е', 'з', 'н', 'е', 'н', 'т', 'р', 'у', 'с', 'л', 'и', 'в', 'о', 'щ', 'у', 'щ', 'е', 'н', 'к', 'о', 'т', 'о', 'р', 'с', 'т', 'ы', 'д', 'к', 'о', 'т', 'о', 'р', 'м', 'о', 'р', 'щ', 'д', 'о', 'л', 'ж', 'н', 'к', 'р', 'у', 'г', 'х', 'о', 'з', 'я', 'й', 'к', 'б', 'о', 'я', 'в', 'с', 'т', 'р', 'е', 'т']\n",
-      "[1085, 1072, 1095, 1072, 1080, 1102, 1083, 1095, 1088, 1077, 1079, 1074, 1099, 1095, 1072, 1081, 1085, 1078, 1072, 1088, 1082, 1074, 1088, 1077, 1084, 1074, 1077, 1095, 1077, 1088, 1084, 1086, 1083, 1086, 1076, 1095, 1077, 1083, 1086, 1074, 1077, 1082, 1074, 1099, 1081, 1090, 1089, 1074, 1086, 1082, 1072, 1084, 1086, 1088, 1082, 1082, 1086, 1090, 1086, 1088, 1085, 1072, 1085, 1080, 1084, 1072, 1078, 1080, 1083, 1077, 1094, 1084, 1087, 1077, 1088, 1077, 1091, 1083, 1086, 1082, 1091, 1083, 1080, 1094, 1084, 1077, 1076, 1083, 1077, 1085, 1085, 1077, 1088, 1077, 1096, 1080, 1084, 1086, 1090, 1087, 1088, 1072, 1074, 1084, 1086, 1089, 1090, 1073, 1083, 1072, 1075, 1086, 1087, 1086, 1083, 1091, 1095, 1085, 1080, 1079, 1073, 1077, 1075, 1085, 1091, 1090, 1074, 1089, 1090, 1088, 1077, 1095, 1089, 1074, 1086, 1093, 1086, 1079, 1103, 1081, 1082, 1083, 1077, 1089, 1090, 1085, 1080, 1094, 1082, 1072, 1084, 1086, 1088, 1082, 1087, 1088, 1080, 1093, 1086, 1076, 1089, 1072, 1084, 1082, 1088, 1086, 1074, 1083, 1074, 1099, 1089, 1086, 1082, 1087, 1103, 1090, 1080, 1101, 1090, 1072, 1078, 1085, 1076, 1086, 1084, 1087, 1086, 1093, 1086, 1076, 1096, 1082, 1072, 1092, 1082, 1074, 1072, 1088, 1090, 1080, 1088, 1082, 1074, 1072, 1088, 1090, 1080, 1088, 1085, 1093, 1086, 1079, 1103, 1081, 1082, 1082, 1086, 1090, 1086, 1088, 1085, 1072, 1085, 1080, 1084, 1072, 1082, 1072, 1084, 1086, 1088, 1082, 1086, 1073, 1077, 1076, 1087, 1088, 1080, 1089, 1083, 1091, 1075, 1087, 1086, 1084, 1077, 1097, 1072, 1083, 1077, 1089, 1090, 1085, 1080, 1094, 1085, 1080, 1078, 1086, 1090, 1076, 1077, 1083, 1100, 1085, 1082, 1074, 1072, 1088, 1090, 1080, 1088, 1082, 1072, 1078, 1076, 1074, 1099, 1093, 1086, 1076, 1091, 1083, 1080, 1094, 1085, 1077, 1087, 1088, 1077, 1084, 1077, 1085, 1087, 1088, 1086, 1093, 1086, 1076, 1084, 1080, 1084, 1093, 1086, 1079, 1103, 1081, 1082, 1080, 1085, 1082, 1091, 1093, 1085, 1085, 1072, 1089, 1090, 1077, 1078, 1086, 1090, 1074, 1086, 1088, 1083, 1077, 1089, 1090, 1085, 1080, 1094, 1082, 1072, 1078, 1076, 1084, 1086, 1083, 1086, 1076, 1095, 1077, 1083, 1086, 1074, 1077, 1082, 1087, 1088, 1086, 1093, 1086, 1076, 1084, 1080, 1084, 1095, 1091, 1074, 1089, 1090, 1074, 1086, 1074, 1072, 1082, 1072, 1082, 1086, 1077, 1090, 1073, 1086, 1083, 1077, 1079, 1085, 1077, 1085, 1090, 1088, 1091, 1089, 1083, 1080, 1074, 1086, 1097, 1091, 1097, 1077, 1085, 1082, 1086, 1090, 1086, 1088, 1089, 1090, 1099, 1076, 1082, 1086, 1090, 1086, 1088, 1084, 1086, 1088, 1097, 1076, 1086, 1083, 1078, 1085, 1082, 1088, 1091, 1075, 1093, 1086, 1079, 1103, 1081, 1082, 1073, 1086, 1103, 1074, 1089, 1090, 1088, 1077, 1090]\n"
+      "[5, 1, 23, 10, 33, 10, 21, 15, 1, 18, 39, 21, 40, 2, 1, 12, 1, 33, 26, 15, 17, 12, 36, 33, 10, 19, 23, 24, 1, 16, 10, 26, 20, 24, 15, 1, 12, 26, 15, 22, 40, 2, 1, 25, 24, 14, 1, 12, 15, 33, 15, 26, 2, 1, 24, 14, 18, 23, 1, 22, 24, 21, 24, 14, 24, 19, 1, 33, 15, 21, 24, 12, 15, 20, 1, 12, 36, 34, 15, 21, 1, 18, 17, 1, 27, 12, 24, 15, 19, 1, 20, 10, 22, 24, 26, 20, 18, 2, 1, 20, 24, 28, 24, 26, 29, 39, 1, 23, 10, 23, 18, 22, 10, 21, 1, 24, 28, 1, 16, 18, 21, 37, 32, 24, 12, 1, 12, 1, 9, 1, 41, 1, 22, 1, 25, 15, 26, 15, 29, 21, 20, 15, 2, 1, 23, 10, 1, 29, 21, 18, 32, 29, 1, 18, 1, 22, 15, 14, 21, 15, 23, 23, 24, 2, 1, 20, 10, 20, 1, 11, 36, 1, 12, 1, 23, 15, 26, 15, 34, 18, 22, 24, 27, 28, 18, 2, 1, 24, 28, 25, 26, 10, 12, 18, 21, 27, 40, 1, 20, 1, 7, 1, 41, 1, 23, 29, 1, 22, 24, 27, 28, 29, 4, 1, 8, 23, 1, 11, 21, 10, 13, 24, 25, 24, 21, 29, 33, 23, 24, 1, 18, 17, 11, 15, 13, 23, 29, 21, 1, 12, 27, 28, 26, 15, 33, 18, 1, 27, 1, 27, 12, 24, 15, 39, 1, 31, 24, 17, 40, 19, 20, 24, 19, 1, 23, 10, 1, 21, 15, 27, 28, 23, 18, 32, 15, 4, 1, 7, 10, 22, 24, 26, 20, 10, 1, 15, 13, 24, 1, 25, 26, 18, 31, 24, 14, 18, 21, 10, 27, 37, 1, 25, 24, 14, 1, 27, 10, 22, 24, 39, 1, 20, 26, 24, 12, 21, 15, 19, 1, 12, 36, 27, 24, 20, 24, 13, 24, 1, 25, 40, 28, 18, 38, 28, 10, 16, 23, 24, 13, 24, 1, 14, 24, 22, 10, 1, 18, 1, 25, 24, 31, 24, 14, 18, 21, 10, 1, 11, 24, 21, 15, 15, 1, 23, 10, 1, 34, 20, 10, 30, 2, 1, 33, 15, 22, 1, 23, 10, 1, 20, 12, 10, 26, 28, 18, 26, 29, 4, 1, 7, 12, 10, 26, 28, 18, 26, 23, 10, 40, 1, 16, 15, 1, 31, 24, 17, 40, 19, 20, 10, 1, 15, 13, 24, 2, 1, 29, 1, 20, 24, 28, 24, 26, 24, 19, 1, 24, 23, 1, 23, 10, 23, 18, 22, 10, 21, 1, 38, 28, 29, 1, 20, 10, 22, 24, 26, 20, 29, 1, 27, 1, 24, 11, 15, 14, 24, 22, 1, 18, 1, 25, 26, 18, 27, 21, 29, 13, 24, 19, 2, 1, 25, 24, 22, 15, 35, 10, 21, 10, 27, 37, 1, 24, 14, 23, 24, 39, 1, 21, 15, 27, 28, 23, 18, 32, 15, 19, 1, 23, 18, 16, 15, 2, 1, 12, 1, 24, 28, 14, 15, 21, 37, 23, 24, 19, 1, 20, 12, 10, 26, 28, 18, 26, 15, 2, 1, 18, 1, 20, 10, 16, 14, 36, 19, 1, 26, 10, 17, 2, 1, 25, 26, 18, 1, 12, 36, 31, 24, 14, 15, 1, 23, 10, 1, 29, 21, 18, 32, 29, 2, 1, 15, 22, 29, 1, 23, 15, 25, 26, 15, 22, 15, 23, 23, 24, 1, 23, 10, 14, 24, 1, 11, 36, 21, 24, 1, 25, 26, 24, 31, 24, 14, 18, 28, 37, 1, 22, 18, 22, 24, 1, 31, 24, 17, 40, 19, 20, 18, 23, 24, 19, 1, 20, 29, 31, 23, 18, 2, 1, 25, 24, 33, 28, 18, 1, 12, 27, 15, 13, 14, 10, 1, 23, 10, 27, 28, 15, 16, 37, 1, 24, 28, 12, 24, 26, 15, 23, 23, 24, 19, 1, 23, 10, 1, 21, 15, 27, 28, 23, 18, 32, 29, 4, 1, 6, 1, 20, 10, 16, 14, 36, 19, 1, 26, 10, 17, 1, 22, 24, 21, 24, 14, 24, 19, 1, 33, 15, 21, 24, 12, 15, 20, 2, 1, 25, 26, 24, 31, 24, 14, 40, 1, 22, 18, 22, 24, 2, 1, 33, 29, 12, 27, 28, 12, 24, 12, 10, 21, 1, 20, 10, 20, 24, 15, 3, 28, 24, 1, 11, 24, 21, 15, 17, 23, 15, 23, 23, 24, 15, 1, 18, 1, 28, 26, 29, 27, 21, 18, 12, 24, 15, 1, 24, 35, 29, 35, 15, 23, 18, 15, 2, 1, 20, 24, 28, 24, 26, 24, 13, 24, 1, 27, 28, 36, 14, 18, 21, 27, 40, 1, 18, 1, 24, 28, 1, 20, 24, 28, 24, 26, 24, 13, 24, 1, 22, 24, 26, 35, 18, 21, 27, 40, 4, 1, 8, 23, 1, 11, 36, 21, 1, 14, 24, 21, 16, 15, 23, 1, 20, 26, 29, 13, 24, 22, 1, 31, 24, 17, 40, 19, 20, 15, 1, 18, 1, 11, 24, 40, 21, 27, 40, 1, 27, 1, 23, 15, 39, 1, 12, 27, 28, 26, 15, 28, 18, 28, 37, 27, 40, 4]\n"
      ]
     }
    ],
