--- a/task_1.ipynb
+++ b/task_1.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 91,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 92,
    "metadata": {},
    "outputs": [
     {
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 93,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -52,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 94,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -67,7 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 95,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -82,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 96,
    "metadata": {},
    "outputs": [
     {
@@ -112,7 +112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 97,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -122,7 +122,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 98,
    "metadata": {},
    "outputs": [
     {
@@ -147,24 +147,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 99,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[5, 1, 23, 10, 33, 10, 21, 15, 1, 18, 39, 21, 40, 2, 1, 12, 1, 33, 26, 15, 17, 12, 36, 33, 10, 19, 23, 24, 1, 16, 10, 26, 20, 24, 15, 1, 12, 26, 15, 22, 40, 2, 1, 25, 24, 14, 1, 12, 15, 33]\n"
+      "[4, 22, 9, 32, 9, 20, 14, 17, 38, 20, 39, 1, 11, 32, 25, 14, 16, 11, 35, 32, 9, 18, 22, 23, 15, 9, 25, 19, 23, 14, 11, 25, 14, 21, 39, 1, 24, 23, 13, 11, 14, 32, 14, 25, 1, 23, 13, 17, 22, 21, 23, 20, 23, 13, 23, 18, 32, 14, 20, 23, 11, 14, 19, 11, 35, 33, 14, 20, 17, 16, 26, 11, 23, 14, 18, 19, 9, 21, 23, 25, 19, 17, 1, 19, 23, 27, 23, 25, 28, 38, 22, 9, 22, 17, 21, 9, 20, 23, 27, 15, 17, 20, 36, 31, 23, 11, 11, 8, 40, 21, 24, 14, 25, 14, 28, 20, 19, 14, 1, 22, 9, 28, 20, 17, 31, 28, 17, 21, 14, 13, 20, 14, 22, 22, 23, 1, 19, 9, 19, 10, 35, 11, 22, 14, 25, 14, 33, 17, 21, 23, 26, 27, 17, 1, 23, 27, 24, 25, 9, 11, 17, 20, 26, 39, 19, 6, 40, 22, 28, 21, 23, 26, 27, 28, 3, 7, 22, 10, 20, 9, 12, 23, 24, 23, 20, 28, 32, 22, 23, 17, 16, 10, 14, 12, 22, 28, 20, 11, 26, 27, 25, 14, 32, 17, 26, 26, 11, 23, 14, 38, 30, 23, 16, 39, 18, 19, 23, 18, 22, 9, 20, 14, 26, 27, 22, 17, 31, 14, 3, 6, 9, 21, 23, 25, 19, 9, 14, 12, 23, 24, 25, 17, 30, 23, 13, 17, 20, 9, 26, 36, 24, 23, 13, 26, 9, 21, 23, 38, 19, 25, 23, 11, 20, 14, 18, 11, 35, 26, 23, 19, 23, 12, 23, 24, 39, 27, 17, 37, 27, 9, 15, 22, 23, 12, 23, 13, 23, 21, 9, 17, 24, 23, 30, 23, 13, 17, 20, 9, 10, 23, 20, 14, 14, 22, 9, 33, 19, 9, 29, 1, 32, 14, 21, 22, 9, 19, 11, 9, 25, 27, 17, 25, 28, 3, 6, 11, 9, 25, 27, 17, 25, 22, 9, 39, 15, 14, 30, 23, 16, 39, 18, 19, 9, 14, 12, 23, 1, 28, 19, 23, 27, 23, 25, 23, 18, 23, 22, 22, 9, 22, 17, 21, 9, 20, 37, 27, 28, 19, 9, 21, 23, 25, 19, 28, 26, 23, 10, 14, 13, 23, 21, 17, 24, 25, 17, 26, 20, 28, 12, 23, 18, 1, 24, 23, 21, 14, 34, 9, 20, 9, 26, 36, 23, 13, 22, 23, 38, 20, 14, 26, 27, 22, 17, 31, 14, 18, 22, 17, 15, 14, 1, 11, 23, 27, 13, 14, 20, 36, 22, 23, 18, 19, 11, 9, 25, 27, 17, 25, 14, 1, 17, 19, 9, 15, 13, 35, 18, 25, 9, 16, 1, 24, 25, 17, 11, 35, 30, 23, 13, 14, 22, 9, 28, 20, 17, 31, 28, 1, 14, 21, 28, 22, 14, 24, 25, 14, 21, 14, 22, 22, 23, 22, 9, 13, 23, 10, 35, 20, 23, 24, 25, 23, 30, 23, 13, 17, 27, 36, 21, 17, 21, 23, 30, 23, 16, 39, 18, 19, 17, 22, 23, 18, 19, 28, 30, 22, 17, 1, 24, 23, 32, 27, 17, 11, 26, 14, 12, 13, 9, 22, 9, 26, 27, 14, 15, 36, 23, 27, 11, 23, 25, 14, 22, 22, 23, 18, 22, 9, 20, 14, 26, 27, 22, 17, 31, 28, 3, 5, 19, 9, 15, 13, 35, 18, 25, 9, 16, 21, 23, 20, 23, 13, 23, 18, 32, 14, 20, 23, 11, 14, 19, 1, 24, 25, 23, 30, 23, 13, 39, 21, 17, 21, 23, 1, 32, 28, 11, 26, 27, 11, 23, 11, 9, 20, 19, 9, 19, 23, 14, 2, 27, 23, 10, 23, 20, 14, 16, 22, 14, 22, 22, 23, 14, 17, 27, 25, 28, 26, 20, 17, 11, 23, 14, 23, 34, 28, 34, 14, 22, 17, 14, 1, 19, 23, 27, 23, 25, 23, 12, 23, 26, 27, 35, 13, 17, 20, 26, 39, 17, 23, 27, 19, 23, 27, 23, 25, 23, 12, 23, 21, 23, 25, 34, 17, 20, 26, 39, 3, 7, 22, 10, 35, 20, 13, 23, 20, 15, 14, 22, 19, 25, 28, 12, 23, 21, 30, 23, 16, 39, 18, 19, 14, 17, 10, 23, 39, 20, 26, 39, 26, 22, 14, 38, 11, 26, 27, 25, 14, 27, 17, 27, 36, 26, 39, 3]\n"
      ]
     }
    ],
    "source": [
-    "def vectorize(tokens: list[str]) -> list[int]:\n",
+    "def vectorize(text: str):\n",
     "    char_to_idx = {char: idx for idx, char in enumerate(sorted(set(text)), start=1)}\n",
-    "    return [char_to_idx[char] for char in text]\n",
+    "    vectorized_text = [char_to_idx[char] for char in text]\n",
+    "    return vectorized_text\n",
+    "\n",
     "\n",
     "vectorized_text = vectorize(tokenized_text)\n",
-    "print(vectorized_text[:50])"
+    "\n",
+    "print(vectorized_text)"
    ]
   },
   {
@@ -176,7 +179,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 100,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -188,7 +191,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 101,
    "metadata": {},
    "outputs": [
     {
@@ -200,7 +203,7 @@
       "нача июл чрезвычайн жарк врем вечер молод человек выйт сво каморк котор нанима жилец м переулок улиц медлен нерешим отправ мост благополучн избегнут встреч сво хозяйк лестниц каморк приход сам кровл высок пятиэтажн дом поход шкаф квартир квартирн хозяйк котор нанима каморк обед прислуг помеща лестниц ниж отдельн квартир кажд выход улиц непремен проход мим хозяйкин кухн настеж отвор лестниц кажд молод человек проход мим чувствова какоет болезнен труслив ощущен котор стыд котор морщ должн круг хозяйк боя встрет\n",
       "\n",
       "['н', 'а', 'ч', 'а', 'и', 'ю', 'л', 'ч', 'р', 'е', 'з', 'в', 'ы', 'ч', 'а', 'й', 'н', 'ж', 'а', 'р', 'к', 'в', 'р', 'е', 'м', 'в', 'е', 'ч', 'е', 'р', 'м', 'о', 'л', 'о', 'д', 'ч', 'е', 'л', 'о', 'в', 'е', 'к', 'в', 'ы', 'й', 'т', 'с', 'в', 'о', 'к', 'а', 'м', 'о', 'р', 'к', 'к', 'о', 'т', 'о', 'р', 'н', 'а', 'н', 'и', 'м', 'а', 'ж', 'и', 'л', 'е', 'ц', 'м', 'п', 'е', 'р', 'е', 'у', 'л', 'о', 'к', 'у', 'л', 'и', 'ц', 'м', 'е', 'д', 'л', 'е', 'н', 'н', 'е', 'р', 'е', 'ш', 'и', 'м', 'о', 'т', 'п', 'р', 'а', 'в', 'м', 'о', 'с', 'т', 'б', 'л', 'а', 'г', 'о', 'п', 'о', 'л', 'у', 'ч', 'н', 'и', 'з', 'б', 'е', 'г', 'н', 'у', 'т', 'в', 'с', 'т', 'р', 'е', 'ч', 'с', 'в', 'о', 'х', 'о', 'з', 'я', 'й', 'к', 'л', 'е', 'с', 'т', 'н', 'и', 'ц', 'к', 'а', 'м', 'о', 'р', 'к', 'п', 'р', 'и', 'х', 'о', 'д', 'с', 'а', 'м', 'к', 'р', 'о', 'в', 'л', 'в', 'ы', 'с', 'о', 'к', 'п', 'я', 'т', 'и', 'э', 'т', 'а', 'ж', 'н', 'д', 'о', 'м', 'п', 'о', 'х', 'о', 'д', 'ш', 'к', 'а', 'ф', 'к', 'в', 'а', 'р', 'т', 'и', 'р', 'к', 'в', 'а', 'р', 'т', 'и', 'р', 'н', 'х', 'о', 'з', 'я', 'й', 'к', 'к', 'о', 'т', 'о', 'р', 'н', 'а', 'н', 'и', 'м', 'а', 'к', 'а', 'м', 'о', 'р', 'к', 'о', 'б', 'е', 'д', 'п', 'р', 'и', 'с', 'л', 'у', 'г', 'п', 'о', 'м', 'е', 'щ', 'а', 'л', 'е', 'с', 'т', 'н', 'и', 'ц', 'н', 'и', 'ж', 'о', 'т', 'д', 'е', 'л', 'ь', 'н', 'к', 'в', 'а', 'р', 'т', 'и', 'р', 'к', 'а', 'ж', 'д', 'в', 'ы', 'х', 'о', 'д', 'у', 'л', 'и', 'ц', 'н', 'е', 'п', 'р', 'е', 'м', 'е', 'н', 'п', 'р', 'о', 'х', 'о', 'д', 'м', 'и', 'м', 'х', 'о', 'з', 'я', 'й', 'к', 'и', 'н', 'к', 'у', 'х', 'н', 'н', 'а', 'с', 'т', 'е', 'ж', 'о', 'т', 'в', 'о', 'р', 'л', 'е', 'с', 'т', 'н', 'и', 'ц', 'к', 'а', 'ж', 'д', 'м', 'о', 'л', 'о', 'д', 'ч', 'е', 'л', 'о', 'в', 'е', 'к', 'п', 'р', 'о', 'х', 'о', 'д', 'м', 'и', 'м', 'ч', 'у', 'в', 'с', 'т', 'в', 'о', 'в', 'а', 'к', 'а', 'к', 'о', 'е', 'т', 'б', 'о', 'л', 'е', 'з', 'н', 'е', 'н', 'т', 'р', 'у', 'с', 'л', 'и', 'в', 'о', 'щ', 'у', 'щ', 'е', 'н', 'к', 'о', 'т', 'о', 'р', 'с', 'т', 'ы', 'д', 'к', 'о', 'т', 'о', 'р', 'м', 'о', 'р', 'щ', 'д', 'о', 'л', 'ж', 'н', 'к', 'р', 'у', 'г', 'х', 'о', 'з', 'я', 'й', 'к', 'б', 'о', 'я', 'в', 'с', 'т', 'р', 'е', 'т']\n",
-      "[5, 1, 23, 10, 33, 10, 21, 15, 1, 18, 39, 21, 40, 2, 1, 12, 1, 33, 26, 15, 17, 12, 36, 33, 10, 19, 23, 24, 1, 16, 10, 26, 20, 24, 15, 1, 12, 26, 15, 22, 40, 2, 1, 25, 24, 14, 1, 12, 15, 33, 15, 26, 2, 1, 24, 14, 18, 23, 1, 22, 24, 21, 24, 14, 24, 19, 1, 33, 15, 21, 24, 12, 15, 20, 1, 12, 36, 34, 15, 21, 1, 18, 17, 1, 27, 12, 24, 15, 19, 1, 20, 10, 22, 24, 26, 20, 18, 2, 1, 20, 24, 28, 24, 26, 29, 39, 1, 23, 10, 23, 18, 22, 10, 21, 1, 24, 28, 1, 16, 18, 21, 37, 32, 24, 12, 1, 12, 1, 9, 1, 41, 1, 22, 1, 25, 15, 26, 15, 29, 21, 20, 15, 2, 1, 23, 10, 1, 29, 21, 18, 32, 29, 1, 18, 1, 22, 15, 14, 21, 15, 23, 23, 24, 2, 1, 20, 10, 20, 1, 11, 36, 1, 12, 1, 23, 15, 26, 15, 34, 18, 22, 24, 27, 28, 18, 2, 1, 24, 28, 25, 26, 10, 12, 18, 21, 27, 40, 1, 20, 1, 7, 1, 41, 1, 23, 29, 1, 22, 24, 27, 28, 29, 4, 1, 8, 23, 1, 11, 21, 10, 13, 24, 25, 24, 21, 29, 33, 23, 24, 1, 18, 17, 11, 15, 13, 23, 29, 21, 1, 12, 27, 28, 26, 15, 33, 18, 1, 27, 1, 27, 12, 24, 15, 39, 1, 31, 24, 17, 40, 19, 20, 24, 19, 1, 23, 10, 1, 21, 15, 27, 28, 23, 18, 32, 15, 4, 1, 7, 10, 22, 24, 26, 20, 10, 1, 15, 13, 24, 1, 25, 26, 18, 31, 24, 14, 18, 21, 10, 27, 37, 1, 25, 24, 14, 1, 27, 10, 22, 24, 39, 1, 20, 26, 24, 12, 21, 15, 19, 1, 12, 36, 27, 24, 20, 24, 13, 24, 1, 25, 40, 28, 18, 38, 28, 10, 16, 23, 24, 13, 24, 1, 14, 24, 22, 10, 1, 18, 1, 25, 24, 31, 24, 14, 18, 21, 10, 1, 11, 24, 21, 15, 15, 1, 23, 10, 1, 34, 20, 10, 30, 2, 1, 33, 15, 22, 1, 23, 10, 1, 20, 12, 10, 26, 28, 18, 26, 29, 4, 1, 7, 12, 10, 26, 28, 18, 26, 23, 10, 40, 1, 16, 15, 1, 31, 24, 17, 40, 19, 20, 10, 1, 15, 13, 24, 2, 1, 29, 1, 20, 24, 28, 24, 26, 24, 19, 1, 24, 23, 1, 23, 10, 23, 18, 22, 10, 21, 1, 38, 28, 29, 1, 20, 10, 22, 24, 26, 20, 29, 1, 27, 1, 24, 11, 15, 14, 24, 22, 1, 18, 1, 25, 26, 18, 27, 21, 29, 13, 24, 19, 2, 1, 25, 24, 22, 15, 35, 10, 21, 10, 27, 37, 1, 24, 14, 23, 24, 39, 1, 21, 15, 27, 28, 23, 18, 32, 15, 19, 1, 23, 18, 16, 15, 2, 1, 12, 1, 24, 28, 14, 15, 21, 37, 23, 24, 19, 1, 20, 12, 10, 26, 28, 18, 26, 15, 2, 1, 18, 1, 20, 10, 16, 14, 36, 19, 1, 26, 10, 17, 2, 1, 25, 26, 18, 1, 12, 36, 31, 24, 14, 15, 1, 23, 10, 1, 29, 21, 18, 32, 29, 2, 1, 15, 22, 29, 1, 23, 15, 25, 26, 15, 22, 15, 23, 23, 24, 1, 23, 10, 14, 24, 1, 11, 36, 21, 24, 1, 25, 26, 24, 31, 24, 14, 18, 28, 37, 1, 22, 18, 22, 24, 1, 31, 24, 17, 40, 19, 20, 18, 23, 24, 19, 1, 20, 29, 31, 23, 18, 2, 1, 25, 24, 33, 28, 18, 1, 12, 27, 15, 13, 14, 10, 1, 23, 10, 27, 28, 15, 16, 37, 1, 24, 28, 12, 24, 26, 15, 23, 23, 24, 19, 1, 23, 10, 1, 21, 15, 27, 28, 23, 18, 32, 29, 4, 1, 6, 1, 20, 10, 16, 14, 36, 19, 1, 26, 10, 17, 1, 22, 24, 21, 24, 14, 24, 19, 1, 33, 15, 21, 24, 12, 15, 20, 2, 1, 25, 26, 24, 31, 24, 14, 40, 1, 22, 18, 22, 24, 2, 1, 33, 29, 12, 27, 28, 12, 24, 12, 10, 21, 1, 20, 10, 20, 24, 15, 3, 28, 24, 1, 11, 24, 21, 15, 17, 23, 15, 23, 23, 24, 15, 1, 18, 1, 28, 26, 29, 27, 21, 18, 12, 24, 15, 1, 24, 35, 29, 35, 15, 23, 18, 15, 2, 1, 20, 24, 28, 24, 26, 24, 13, 24, 1, 27, 28, 36, 14, 18, 21, 27, 40, 1, 18, 1, 24, 28, 1, 20, 24, 28, 24, 26, 24, 13, 24, 1, 22, 24, 26, 35, 18, 21, 27, 40, 4, 1, 8, 23, 1, 11, 36, 21, 1, 14, 24, 21, 16, 15, 23, 1, 20, 26, 29, 13, 24, 22, 1, 31, 24, 17, 40, 19, 20, 15, 1, 18, 1, 11, 24, 40, 21, 27, 40, 1, 27, 1, 23, 15, 39, 1, 12, 27, 28, 26, 15, 28, 18, 28, 37, 27, 40, 4]\n"
+      "[14, 1, 24, 1, 9, 30, 12, 24, 17, 6, 8, 3, 27, 24, 1, 10, 14, 7, 1, 17, 11, 3, 17, 6, 13, 3, 6, 24, 6, 17, 13, 15, 12, 15, 5, 24, 6, 12, 15, 3, 6, 11, 3, 27, 10, 19, 18, 3, 15, 11, 1, 13, 15, 17, 11, 11, 15, 19, 15, 17, 14, 1, 14, 9, 13, 1, 7, 9, 12, 6, 23, 13, 16, 6, 17, 6, 20, 12, 15, 11, 20, 12, 9, 23, 13, 6, 5, 12, 6, 14, 14, 6, 17, 6, 25, 9, 13, 15, 19, 16, 17, 1, 3, 13, 15, 18, 19, 2, 12, 1, 4, 15, 16, 15, 12, 20, 24, 14, 9, 8, 2, 6, 4, 14, 20, 19, 3, 18, 19, 17, 6, 24, 18, 3, 15, 22, 15, 8, 31, 10, 11, 12, 6, 18, 19, 14, 9, 23, 11, 1, 13, 15, 17, 11, 16, 17, 9, 22, 15, 5, 18, 1, 13, 11, 17, 15, 3, 12, 3, 27, 18, 15, 11, 16, 31, 19, 9, 29, 19, 1, 7, 14, 5, 15, 13, 16, 15, 22, 15, 5, 25, 11, 1, 21, 11, 3, 1, 17, 19, 9, 17, 11, 3, 1, 17, 19, 9, 17, 14, 22, 15, 8, 31, 10, 11, 11, 15, 19, 15, 17, 14, 1, 14, 9, 13, 1, 11, 1, 13, 15, 17, 11, 15, 2, 6, 5, 16, 17, 9, 18, 12, 20, 4, 16, 15, 13, 6, 26, 1, 12, 6, 18, 19, 14, 9, 23, 14, 9, 7, 15, 19, 5, 6, 12, 28, 14, 11, 3, 1, 17, 19, 9, 17, 11, 1, 7, 5, 3, 27, 22, 15, 5, 20, 12, 9, 23, 14, 6, 16, 17, 6, 13, 6, 14, 16, 17, 15, 22, 15, 5, 13, 9, 13, 22, 15, 8, 31, 10, 11, 9, 14, 11, 20, 22, 14, 14, 1, 18, 19, 6, 7, 15, 19, 3, 15, 17, 12, 6, 18, 19, 14, 9, 23, 11, 1, 7, 5, 13, 15, 12, 15, 5, 24, 6, 12, 15, 3, 6, 11, 16, 17, 15, 22, 15, 5, 13, 9, 13, 24, 20, 3, 18, 19, 3, 15, 3, 1, 11, 1, 11, 15, 6, 19, 2, 15, 12, 6, 8, 14, 6, 14, 19, 17, 20, 18, 12, 9, 3, 15, 26, 20, 26, 6, 14, 11, 15, 19, 15, 17, 18, 19, 27, 5, 11, 15, 19, 15, 17, 13, 15, 17, 26, 5, 15, 12, 7, 14, 11, 17, 20, 4, 22, 15, 8, 31, 10, 11, 2, 15, 31, 3, 18, 19, 17, 6, 19]\n"
      ]
     }
    ],
