modify: task_1 change vectorize

--- a/task_1.ipynb
+++ b/task_1.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 102,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 103,
    "metadata": {},
    "outputs": [
     {
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 104,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -52,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 105,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -67,7 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 106,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -82,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 107,
    "metadata": {},
    "outputs": [
     {
@@ -112,7 +112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 108,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -122,7 +122,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 109,
    "metadata": {},
    "outputs": [
     {
@@ -147,7 +147,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 110,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def vectorize(text: str):\n",
+    "    char_to_idx = {char: idx for idx, char in enumerate(sorted(set(text)), start=1)}\n",
+    "    vectorized_text = [char_to_idx[char] for char in text]\n",
+    "    return vectorized_text\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 111,
    "metadata": {},
    "outputs": [
     {
@@ -159,14 +171,7 @@
     }
    ],
    "source": [
-    "def vectorize(text: str):\n",
-    "    char_to_idx = {char: idx for idx, char in enumerate(sorted(set(text)), start=1)}\n",
-    "    vectorized_text = [char_to_idx[char] for char in text]\n",
-    "    return vectorized_text\n",
-    "\n",
-    "\n",
     "vectorized_text = vectorize(tokenized_text)\n",
-    "\n",
     "print(vectorized_text)"
    ]
   },
@@ -179,7 +184,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 112,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -191,7 +196,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 113,
    "metadata": {},
    "outputs": [
     {
